--- a/asg3/README
+++ b/asg3/README
@@ -1,5 +1,5 @@
-Gabriel Reyes(ghreyes@ucsc.edu)
-Partner: Luke Lai(luelai@ucsc.edu)
+Luke Lai(luelai@ucsc.edu)
+Partner: Gabriel Reyes(ghreyes@ucsc.edu)
 CMPS 109
 Asg 3
 2/14/2016
